[package]
name = "b"
version = "0.6.0"
edition = "2021"
description = "b"
license = "Unlicense"
documentation = "https://foo.com"
homepage = "https://foo.com"
repository = "https://foo.com"

[dependencies]
libp2p = "0.49.0"
libp2p-swarm = "0.40.1"
libp2p-swarm-derive = "0.30.1"
libp2p-ping = "0.40.1"
